--- a/style.css
+++ b/style.css
@@ -5,19 +5,18 @@ body{
     background-color: #e6c6c8
 }
 
-
-.picContainer img{
+#mainContainer img{
     height:100px;
     width:80px;
     margin:4px;
     border: 1px solid black;
     border-radius: 10px;
     /* to make images black initially*/
-    filter: brightness(0)  
+    filter: brightness(0);
 }
 
 
-.picContainer img:hover{
+#mainContainer img:hover{
     transform: scale(1.1);
     
 }
@@ -30,6 +29,16 @@ h4{
 }
 #sound{
     height:30px;
+}
 
+.win{
+    width:300px;
+    height:400px;
+    background-image: url('images/won.gif');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left:auto;
+    margin-right:auto;
+    
 }
 
